[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sickle.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/sickle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.88805, 16.57 )

[sub_resource type="CircleShape2D" id=2]
radius = 94.6761

[sub_resource type="Animation" id=3]
resource_name = "Sickle_Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 29.3333 )

[node name="Sickle" type="KinematicBody2D"]
position = Vector2( 102, 34 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
scale = Vector2( 2.79594, 1.50875 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.76811, 1.67539 )
texture = ExtResource( 2 )
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sickle_Anim = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -0.666672, 4.66667 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
